Added tests for WebTestClient